--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/app.js",
-    "docs": "apidoc -c ./lib/apidoc.json -i app/routes -o lib/apidoc/"
+    "docs": "apidoc -c ./lib/apidoc.json -i app/modules -o lib/apidoc/"
   },
   "keywords": [],
   "author": "",
