--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apidoc": "^0.28.1",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "twilio": "^3.76.1"
   }
 }
